// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Date > crossSerialize > scoped > supports Date 1`] = `"($R=>$R[0]=new Date("2023-03-14T11:16:24.879Z"))($R["example"])"`;

exports[`Date > crossSerialize > supports Date 1`] = `"$R[0]=new Date("2023-03-14T11:16:24.879Z")"`;

exports[`Date > crossSerializeAsync > scoped > supports Date 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=new Date("2023-03-14T11:16:24.879Z")))($R["example"])"`;

exports[`Date > crossSerializeAsync > supports Date 1`] = `"$R[0]=Promise.resolve($R[1]=new Date("2023-03-14T11:16:24.879Z"))"`;

exports[`Date > crossSerializeStream > scoped > supports Date 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`Date > crossSerializeStream > scoped > supports Date 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new Date("2023-03-14T11:16:24.879Z")))($R["example"])"
`;

exports[`Date > crossSerializeStream > supports Date 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`Date > crossSerializeStream > supports Date 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new Date("2023-03-14T11:16:24.879Z"))"
`;

exports[`Date > serialize > supports Date 1`] = `"new Date("2023-03-14T11:16:24.879Z")"`;

exports[`Date > serializeAsync > supports Date 1`] = `"Promise.resolve(new Date("2023-03-14T11:16:24.879Z"))"`;

exports[`Date > toCrossJSON > supports Date 1`] = `"{"t":5,"i":0,"s":"2023-03-14T11:16:24.879Z"}"`;

exports[`Date > toCrossJSONAsync > supports Date 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":5,"i":1,"s":"2023-03-14T11:16:24.879Z"}}"`;

exports[`Date > toCrossJSONStream > supports Date 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Date > toCrossJSONStream > supports Date 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":5,"i":3,"s":"2023-03-14T11:16:24.879Z"}]}"`;

exports[`Date > toJSON > supports Date 1`] = `"{"t":{"t":5,"i":0,"s":"2023-03-14T11:16:24.879Z"},"f":31,"m":[]}"`;

exports[`Date > toJSONAsync > supports Date 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":5,"i":1,"s":"2023-03-14T11:16:24.879Z"}},"f":31,"m":[]}"`;
